--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ mapping_version=2023.09.03-1.20.1
 
 mod_id=adlibveins
 mod_name=Adlib Veins
-mod_license=All Rights Reserved
+mod_license=MIT
 mod_version=0.1.1-1.20.1
 mod_group_id=me.kc00l.adlibveins
 mod_authors=kc00l
